--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-package-Terrablu",
+  "name": "my-package-terrablu",
   "version": "1.0.0",
   "description": "A collection of test cases",
   "main": "index.js",
